[2008-08-03] 0.9.3
+ Plugins: Added the {a} block plugin to generate <a> tags
+ Syntax: Added the ";" token that allows to group multiple instructions in one
  single template tag, example: {if $foo; "> $foo";$bar;/} is equal to:
  {if $foo}> {$foo}{$bar}{/} - This also allow block operations such as:
  {a http://url.com; "Text" /} which equals to {a http://url.com}Text{/}
+ Syntax: Block plugins that you want to call without content can be
  self-closed just like XML tags (e.g. {a "http://url.com" /} ). Be careful not
  to close a non-block plugin like that however, since it will close it's
  parent block
+ Syntax: Static methods can be called using {Class::method()}
+ Syntax: It is now possible to use a plugin's result as an object and call
  a method or read a property from it, i.e. {fetchObject()->doStuff()}
+ API: Added Dwoo_Plugin::paramsToAttributes() utility function to help
  with the creation of compilable xml/html-related plugins
+ API: Added Dwoo->setPluginProxy() and Dwoo_IPluginProxy that allow you to
  hook into the compiler's plugin subsystem to provide your own plugin calls.
  Thanks to Denis Arh for the patch
   => http://forum.dwoo.org/viewtopic.php?id=70
+ API: Dwoo->addPlugin() has a third parameter to mark a plugin as compilable
+ Compiler supports method calls into a method call's parameters
* Dwoo_Compiler::implode_r is now public/static so it can be used in other
  places such as plugin proxies
* Syntax: Math expressions in strings are now only allowed when the entire
  expression is delimited, e.g. {"/$foo/$bar"} evaluates as just that while
  {"/`$foo/$bar`"} will result in "/".($foo/$bar), therefore processing the /
  as a division, this is better since URLs using / are far more common than
  math in strings
   => http://forum.dwoo.org/viewtopic.php?id=50
* Compiler now allows the use of the right delimiter inside strings (e.g. {"}"})
* Fixed a bug preventing if blocks containing a {elseif} followed by {else}